[tool.poetry]
name = "llmzoomcamp"
version = "0.1.0"
description = ""
authors = ["MFBenedetto <mbenedetto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
requests = "^2.32.3"
elasticsearch = "^8.14.0"
tqdm = "^4.66.4"
tiktoken = "^0.7.0"
sentence-transformers = "^3.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
